Corrected size and alignment of booking button for laptop

--- a/css/main.css
+++ b/css/main.css
@@ -192,6 +192,7 @@ footer {
 @media (min-width: 1200px) {
   .header-content-wrapper {
     justify-content: space-between;
+    align-items: center;
   }
 
   h1 {
